# line_length_validator

./: CMakeLists.txt
main/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  console_color.cpp  console_color.h  main.cpp
src/: CMakeLists.txt  file_validator.cpp  file_validator.h  fix.cpp  line_length_validator.cpp  line_length_validator.h  test.h  validator_output.cpp  validator_output.h  validator_settings.h
